<resources>
    <string name="app_name">Smokegator 0.8.2 beta</string>

    <!-- Main menu -->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="google_maps_key">AIzaSyDFhWSLNrtFdYiOOL65SWy31ILfjSKRKQA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_permission_map">Разрешения не найдены</string>
    <string name="title_location_permission">Разрешение</string>
    <string name="text_location_permission">Разрешить доступ к локации</string>
    <string name="ok">ОК</string>
    <string name="add">Добавить</string>

    <!-- GetPelengActivity -->
    <string name="az">Азимут</string>
    <string name="lat">Широта</string>
    <string name="lon">Долгота</string>
    <string name="lat_hint">00.000</string>
    <string name="lon_hint">00.000</string>
    <string name="input_peleng">Ввод пеленга</string>
    <string name="send">Отправить</string>
    <string name="bearing">Азимут</string>
    <string name="m_bearing">магнитный</string>
    <string name="t_bearung">истинный</string>
    <string name="bearing_hint">000.0</string>
    <string name="GPS_On">GPS включен</string>
    <string name="GPS_Off">GPS выключен</string>
    <string name="GPS_ToggleButton">GPS ToggleButton</string>
    <string name="accuracy">точность</string>
    <string name="inclination">магнитное склонение</string>


    <string name="compass_image_description">Image of a compass rose, that rotates based on your
        orientation</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="user_login">Пользователь</string>
    <string name="map_header">Карта</string>
    <string name="pelengator_header">Пеленгатор</string>
    <string name="sync_header">Синхронизация</string>

    <!-- Preference Login -->
    <string name="user_isregistered_title">Зарегистрирован</string>
    <string name="user_isregistered_on">Необходим пароль</string>
    <string name="user_isregistered_off">Анонимный доступ, только просмотр</string>

    <string name="user_email">E-mail</string>
    <string name="user_password">Пароль</string>
    <string name="user_callsign">Позывной</string>

    <!-- Preferences Map -->
    <string name="bearing_correction_title">Азимут</string>
    <string name="bearing_correction_off">Магнитный азимут</string>
    <string name="bearing_correction_on">Истинный азимут</string>

    <string name="map_maptype_default">MAP_TYPE_NORMAL</string>
    <string name="maptype_title">Тип карты</string>
    <string name="peleng_length">Длина пеленга, 0 - 30 км</string>

    <!-- Preferences Pelengator -->
    <string name="pelengator_gps_title">Пеленг по GPS</string>
    <string name="pelengator_gps_off">Выключен</string>
    <string name="pelengator_gps_on">Включен</string>

    <!-- Sync Preferences -->
    <string name="tracker_title">Трекер</string>
    <string name="tracker_summary_off">Трекер выключен</string>
    <string name="tracker_summary_on">Трекер включен</string>

    <string name="title_peleng_list">Pelengs</string>
    <string name="title_peleng_detail">Peleng Detail</string>
    <string name="title_activity_pelenglist">Pelengs</string>

    <string name="title_activity_arpelengator">ARPelengatorActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!-- GetPeleng UI. ToDo rearrange this -->

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>


    <string name="title_activity_group">GroupActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_group">Группы</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
