<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wildfire.volunteers.smokegator.GetPelengActivity">

    <TextView
        android:id="@+id/trueBearingTextView"
        android:layout_width="121dp"
        android:layout_height="21dp"
        android:text="@string/t_bearung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTBearing" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="33dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <Button
            android:id="@+id/start_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="startUpdatesButtonHandler"
            android:text="@string/start_updates" />

        <Button
            android:id="@+id/stop_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:onClick="stopUpdatesButtonHandler"
            android:text="@string/stop_updates" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/send"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextMBearing" />

    <EditText
        android:id="@+id/editTextLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/az"
        android:inputType="numberDecimal"
        android:text="0.0000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.0000000"
        app:layout_constraintStart_toEndOf="@+id/editTextLat"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMBearing"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="(0.0)"
        app:layout_constraintStart_toEndOf="@+id/trueBearingTextView"
        app:layout_constraintTop_toTopOf="@+id/editTextTBearing" />

    <EditText
        android:id="@+id/editTextTBearing"
        android:layout_width="87dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/lon"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextLng" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/input_peleng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/magBearingTextView"
        android:layout_width="125dp"
        android:layout_height="23dp"
        android:text="@string/m_bearing"
        app:layout_constraintStart_toEndOf="@+id/trueBearingTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextMBearing" />

    <ToggleButton
        android:id="@+id/GPStoggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:text="@string/GPS_ToggleButton"
        android:textOff="@string/GPS_Off"
        android:textOn="@string/GPS_On"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AccuracyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:text="@string/accuracy"
        app:layout_constraintEnd_toEndOf="@+id/GPStoggleButton"
        app:layout_constraintTop_toBottomOf="@+id/GPStoggleButton" />

    <wildfire.volunteers.smokegator.ui.CompassView
        android:id="@+id/compassView"
        android:layout_width="87dp"
        android:layout_height="88dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/magBearingTextView"
        app:layout_constraintTop_toTopOf="@+id/editTextMBearing" />

    <TextView
        android:id="@+id/inclinationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inclination"
        app:layout_constraintStart_toStartOf="@+id/compassView"
        app:layout_constraintTop_toBottomOf="@+id/compassView" />


</androidx.constraintlayout.widget.ConstraintLayout>